make footer sticky to bottom of the page

--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@
         </article>
     </div>
 
+    <div class="article-5">
+        <article>
+            <h2>Generic Article Title</h2>
+            <p><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin vel tortor venenatis euismod.</i>
+            </p></article>
+    </div>
+
+    <div class="article-6">
+        <article>
+            <h2>Generic Article Title</h2>
+            <p><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin vel tortor venenatis euismod.</i>
+            </p></article>
+    </div>
+
 </div>
 <footer>
 
